chore: update releaserc

--- a/releaserc.json
+++ b/releaserc.json
@@ -8,10 +8,31 @@
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "parserOpts": {
+          "noteKeywords": [
+            "BREAKING CHANGE",
+            "BREAKING CHANGES"
+          ]
+        },
+        "releaseRules": [
+          {
+            "breaking": true,
+            "release": "major"
+          }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    "@semantic-release/git"
+    [
+      "@semantic-release/git",
+      {
+        "message": "release: 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
+      }
+    ]
   ]
 }
