--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: Run Semantic Release
-        id: semantic # Define um ID para capturar outputs
+        id: semantic
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: pnpm exec semantic-release
