--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,22 +27,26 @@ jobs:
           version: 9.6
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run Semantic Release
         id: semantic
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: pnpm exec semantic-release
+        run: |
+          VERSION=$(pnpm exec semantic-release --dry-run | grep -oP "Published release \K[0-9]+\.[0-9]+\.[0-9]+")
+          if [ -n "$VERSION" ]; then
+            echo "new_release_published=true" >> $GITHUB_ENV
+            echo "new_release_version=$VERSION" >> $GITHUB_ENV
+          else
+            echo "new_release_published=false" >> $GITHUB_ENV
+          fi
 
       - name: Display release information
-        if: steps.semantic.outputs.new_release_published == 'true'
+        if: env.new_release_published == 'true'
         run: |
-          echo "Nova versão publicada: ${{ steps.semantic.outputs.new_release_version }}"
-          echo "Versão major: ${{ steps.semantic.outputs.new_release_major_version }}"
-          echo "Versão minor: ${{ steps.semantic.outputs.new_release_minor_version }}"
-          echo "Versão patch: ${{ steps.semantic.outputs.new_release_patch_version }}"
+          echo "Nova versão publicada: ${{ env.new_release_version }}"
 
       - name: Display message if no release was published
-        if: steps.semantic.outputs.new_release_published != 'true'
+        if: env.new_release_published != 'true'
         run: echo "Nenhuma nova versão foi publicada."
