ci: add env name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # Permite fazer push na branch
-      pull-requests: write # Permite criar pull requests (opcional)
-      issues: write # Permite criar issues (opcional)
+    environment:
+      name: Semver
 
     steps:
       - name: Checkout code
