--- a/releaserc.json
+++ b/releaserc.json
@@ -7,6 +7,7 @@
       "channel": "rc"
     }
   ],
+  "repositoryUrl": "https://github.com/yago-liv/semantic-test.git",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
