--- a/releaserc.json
+++ b/releaserc.json
@@ -32,6 +32,10 @@
     [
       "@semantic-release/git",
       {
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
         "message": "release: 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ]
