--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
