--- a/releaserc.json
+++ b/releaserc.json
@@ -30,6 +30,12 @@
     "@semantic-release/changelog",
     "@semantic-release/github",
     [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
+    [
       "@semantic-release/git",
       {
         "assets": [
