--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "semantic-release": "^24.2.3",
+    "semantic-release": "19.0.3",
     "typescript": "~5.6.2"
   }
 }
