--- a/releaserc.json
+++ b/releaserc.json
@@ -38,6 +38,12 @@
         ],
         "message": "release: 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
       }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
     ]
   ]
 }
