feat: cahnge order

--- a/releaserc.json
+++ b/releaserc.json
@@ -28,13 +28,8 @@
     ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    "@semantic-release/git",
     "@semantic-release/github",
-    [
-      "@semantic-release/npm",
-      {
-        "npmPublish": false
-      }
-    ],
     [
       {
         "assets": [
@@ -44,6 +39,6 @@
         "message": "chore(release): 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ],
-    "@semantic-release/git"
+    "@semantic-release/npm"
   ]
 }
