--- a/releaserc.json
+++ b/releaserc.json
@@ -32,6 +32,10 @@
     "@semantic-release/github",
     [
       {
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
         "message": "chore(release): 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ],
