--- a/releaserc.json
+++ b/releaserc.json
@@ -29,8 +29,8 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/git",
-    "@semantic-release/github",
     [
+      "@semantic-release/git",
       {
         "assets": [
           "package.json",
