--- a/releaserc.json
+++ b/releaserc.json
@@ -7,7 +7,6 @@
       "channel": "rc"
     }
   ],
-  "repositoryUrl": "https://github.com/yago-liv/semantic-test.git",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -28,7 +27,6 @@
     ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/git",
     [
       "@semantic-release/git",
       {
@@ -36,9 +34,9 @@
           "package.json",
           "CHANGELOG.md"
         ],
-        "message": "chore(release): 🔖  ${nextRelease.version} \n\n${nextRelease.notes}"
+        "message": "chore(release): 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ],
-    "@semantic-release/npm"
+    "@semantic-release/github"
   ]
 }
