--- a/releaserc.json
+++ b/releaserc.json
@@ -8,25 +8,15 @@
     }
   ],
   "plugins": [
-    [
-      "@semantic-release/commit-analyzer",
-      {
-        "parserOpts": {
-          "noteKeywords": [
-            "BREAKING CHANGE",
-            "BREAKING CHANGES"
-          ]
-        },
-        "releaseRules": [
-          {
-            "breaking": true,
-            "release": "major"
-          }
-        ]
-      }
-    ],
+    "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
     [
       "@semantic-release/git",
       {
