feat: change title

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,4 @@ jobs:
         id: semantic
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          # Executa o semantic-release (sem dry-run)
-          pnpm exec semantic-release --debug
+        run: pnpm exec semantic-release
