--- a/releaserc.json
+++ b/releaserc.json
@@ -8,15 +8,27 @@
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
     [
-      "@semantic-release/npm",
+      "@semantic-release/commit-analyzer",
       {
-        "npmPublish": false
+        "parserOpts": {
+          "noteKeywords": [
+            "BREAKING CHANGE",
+            "BREAKING CHANGES"
+          ]
+        },
+        "releaseRules": [
+          {
+            "breaking": true,
+            "release": "major"
+          }
+        ]
       }
     ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
@@ -26,7 +38,6 @@
         ],
         "message": "chore(release): 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
       }
-    ],
-    "@semantic-release/github"
+    ]
   ]
 }
