--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Baixa todo o histórico de commits (necessário para o semantic-release)
+          persist-credentials: false # Não persiste as credenciais do repositório
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -34,6 +35,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       - name: Run Semantic Release
         id: semantic
