--- a/releaserc.json
+++ b/releaserc.json
@@ -26,18 +26,22 @@
       }
     ],
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    "@semantic-release/github",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
         "assets": [
-          "package.json",
           "CHANGELOG.md"
         ],
         "message": "chore(release): 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
       }
-    ]
+    ],
+    "@semantic-release/github"
   ]
 }
