--- a/.releaserc.json
+++ b/.releaserc.json
@@ -26,22 +26,18 @@
       }
     ],
     "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
+    "@semantic-release/changelog",
+    "@semantic-release/github",
     "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
         "assets": [
+          "package.json",
           "CHANGELOG.md"
         ],
         "message": "chore(release): 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
       }
-    ],
-    "@semantic-release/github"
+    ]
   ]
 }
