--- a/.releaserc.json
+++ b/.releaserc.json
@@ -27,6 +27,12 @@
     ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "npm run build"
+      }
+    ],
     "@semantic-release/github",
     "@semantic-release/npm",
     [
