--- a/.releaserc.json
+++ b/.releaserc.json
@@ -30,7 +30,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "npm run build"
+        "prepareCmd": "pnpm build"
       }
     ],
     "@semantic-release/github",
