--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,5 +38,8 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
+        with:
+          extra_plugins: |
+            - "@semantic-release/exec"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
