ci: change release msg

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -42,7 +42,7 @@
           "package.json",
           "CHANGELOG.md"
         ],
-        "message": "chore(release): 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
+        "message": "release: 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
       }
     ]
   ]
