--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,7 @@
     "main",
     {
       "name": "homolog",
-      "prerelease": true,
+      "prerelease": "rc",
       "channel": "rc"
     }
   ],
