--- a/.releaserc.json
+++ b/.releaserc.json
@@ -42,7 +42,8 @@
           "package.json",
           "CHANGELOG.md"
         ],
-        "message": "release: 🔖 ${nextRelease.version} \n\n${nextRelease.notes}"
+        "message": "release: 🔖 ${nextRelease.version} \n\n${nextRelease.notes}",
+        "branch": "main"
       }
     ]
   ]
