--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,10 @@ on:
     types:
       - completed
 
-env:
-  PROJECT_ID: "plataforma-liv"
-  REGION: "us-central1"
-  SERVICE: "my-service"
-  WORKLOAD_IDENTITY_PROVIDER: "projects/209650852772/locations/global/workloadIdentityPools/github-actions/providers/github-provider"
-
 jobs:
   deploy:
-    needs: release
     runs-on: "ubuntu-latest"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: "read"
       id-token: "write"
@@ -28,7 +22,7 @@ jobs:
         name: "Authenticate to Google Cloud"
         uses: "google-github-actions/auth@v2"
         with:
-          workload_identity_provider: "${{ env.WORKLOAD_IDENTITY_PROVIDER }}"
+          workload_identity_provider: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
           service_account: "github-actions@plataforma-liv.iam.gserviceaccount.com"
 
       - name: "Docker Auth"
@@ -36,21 +30,20 @@ jobs:
         with:
           username: "oauth2accesstoken"
           password: "${{ steps.auth.outputs.auth_token }}"
-          registry: "${{ env.REGION }}-docker.pkg.dev"
+          registry: "${{ secrets.REGION }}-docker.pkg.dev"
 
       - name: "Build and Push Container"
         run: |-
-          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          DOCKER_TAG="${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
 
       - name: "Deploy to Cloud Run"
         uses: "google-github-actions/deploy-cloudrun@v2"
         with:
-          service: "${{ env.SERVICE }}"
-          region: "${{ env.REGION }}"
-          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          service: "${{ secrets.SERVICE }}"
+          region: "${{ secrets.REGION }}"
+          image: "${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}"
 
       - name: "Show output"
-        run: |-
-          echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}"
+        run: echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}"
