--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,11 @@ on:
       - completed
 
 jobs:
+  init:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Starting deployment workflow..."
+
   deploy:
     runs-on: "ubuntu-latest"
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -39,6 +44,7 @@ jobs:
           docker push "${DOCKER_TAG}"
 
       - name: "Deploy to Cloud Run"
+        id: deploy
         uses: "google-github-actions/deploy-cloudrun@v2"
         with:
           service: "${{ secrets.SERVICE }}"
