--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,50 +6,60 @@ on:
     types:
       - completed
 
-jobs:
-  init:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Starting deployment workflow..."
+env:
+  PROJECT_ID: "plataforma-liv"
+  REGION: "us-central1"
+  SERVICE: "my-service"
+  WORKLOAD_IDENTITY_PROVIDER: "projects/209650852772/locations/global/workloadIdentityPools/github-actions/providers/github-provider"
 
+jobs:
   deploy:
     runs-on: "ubuntu-latest"
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
     permissions:
       contents: "read"
       id-token: "write"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v4"
+        uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # actions/checkout@v4
 
+      # Configure Workload Identity Federation and generate an access token.
+      #
+      # See https://github.com/google-github-actions/auth for more options,
+      # including authenticating via a JSON credentials file.
       - id: "auth"
         name: "Authenticate to Google Cloud"
-        uses: "google-github-actions/auth@v2"
+        uses: "google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2" # google-github-actions/auth@v2
         with:
-          workload_identity_provider: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
-          service_account: "github-actions@plataforma-liv.iam.gserviceaccount.com"
+          workload_identity_provider: "${{ env.WORKLOAD_IDENTITY_PROVIDER }}"
 
+      # BEGIN - Docker auth and build
+      #
+      # If you already have a container image, you can omit these steps.
       - name: "Docker Auth"
-        uses: "docker/login-action@v3"
+        uses: "docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567" # docker/login-action@v3
         with:
           username: "oauth2accesstoken"
           password: "${{ steps.auth.outputs.auth_token }}"
-          registry: "${{ secrets.REGION }}-docker.pkg.dev"
+          registry: "${{ env.REGION }}-docker.pkg.dev"
 
       - name: "Build and Push Container"
         run: |-
-          DOCKER_TAG="${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}"
+          DOCKER_TAG="$${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
-
       - name: "Deploy to Cloud Run"
-        id: deploy
-        uses: "google-github-actions/deploy-cloudrun@v2"
-        with:
-          service: "${{ secrets.SERVICE }}"
-          region: "${{ secrets.REGION }}"
-          image: "${{ secrets.REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}"
+        # END - Docker auth and build
 
+        uses: "google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17" # google-github-actions/deploy-cloudrun@v2
+        with:
+          service: "${{ env.SERVICE }}"
+          region: "${{ env.REGION }}"
+          # NOTE: If using a pre-built image, update the image name below:
+
+          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+      # If required, use the Cloud Run URL output in later steps
       - name: "Show output"
-        run: echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}"
+        run: |2-
+          echo ${{ steps.deploy.outputs.url }}
