--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   REGION: "us-central1"
   SERVICE: "pl-dev-teste-yago"
   WORKLOAD_IDENTITY_PROVIDER: "projects/209650852772/locations/global/workloadIdentityPools/github-actions/providers/github-provider"
-  REPO_NAME: "yago-teste"
+  REPO_NAME: "cloud-run-source-deploy"
 
 jobs:
   deploy:
@@ -47,7 +47,7 @@ jobs:
 
       - name: "Build and Push Container"
         run: |-
-          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/cloud-run-source-deploy/${{ env.REPO_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
+          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
       - name: "Deploy to Cloud Run"
@@ -58,7 +58,7 @@ jobs:
           service: "${{ env.SERVICE }}"
           region: "${{ env.REGION }}"
           # NOTE: If using a pre-built image, update the image name below:
-          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/cloud-run-source-deploy/${{ env.REPO_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
+          image: "${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
 
       # If required, use the Cloud Run URL output in later steps
       - name: "Show output"
