--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/browser;
         index index.html;
         location / {
             try_files $uri $uri/ /index.html;
