--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - rc/*
+    paths-ignore:
+      - "package.json"
+      - "package-lock.json"
+      - "pnpm-lock.yaml"
+      - "CHANGELOG.md"
 
 jobs:
   release:
@@ -13,8 +18,7 @@ jobs:
       contents: write # Permite fazer push na branch
       pull-requests: write # Permite criar pull requests (opcional)
       issues: write # Permite criar issues (opcional)
-    environment:
-      name: Semver
+    if: ${{ github.event.head_commit.author.name != 'github-actions[bot]' }}
 
     steps:
       - name: Checkout code
