ci: change extra plugins

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,5 +47,6 @@ jobs:
         with:
           extra_plugins: |
             - "@semantic-release/exec"
+            - "@semantic-release/github"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
