--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,5 +48,6 @@ jobs:
           extra_plugins: |
             - "@semantic-release/exec"
             - "@semantic-release/github"
+            - "@semantic-release/git"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
